<resources>
    <string name="app_name">Travel Android Khady</string>
    <string name="gen_map">Voyage Android</string>
    <string name="specif_map">Drapeaux Specifiques</string>
    <string name="plane">Avion</string>
    <string name="home"><b><u>Voyage Android</u></b></string>
    <string name="home_title"><b><u>Accueil</u></b>\n</string>
    <string name="home_info">Pour toute information, appelez le <b>0185752367</b>, \nOu par mail <b>gran@gmail.com </b>.\nNous serions ravis de vous accueillir.\n</string>
    <string name="stub"><b>***</b></string>
    <string name="wait">Veuillez patienter un instant...</string>
    <string name="day_warning">Attention au changement de date(%1$d%2$s)</string>
    <string name="register"><b><u>Enregistrement</u></b></string>
    <string name="register_nom"><b><u>Nom</u></b>\n</string>
    <string name="register_tel"><b><u>Tel</u></b>\n</string>
    <string name="register_lieu"><b><u>Lieu</u></b>\n</string>
    <string name="register_info"><b><u>Information</u></b>\n</string>
    <string name="register_urg"><b><u>Urgent</u></b>\n</string>
    <string name="register_reg"><b><u>Enregistrer</u></b>\n</string>
    <plurals name="second">
        <item quantity ="zero">seconde</item>
        <item quantity ="one">seconde</item>
        <item quantity ="other">secondes</item>
    </plurals>
</resources>
