<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/home_title"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_info"
        android:autoLink="phone|email"/>

    <TextView
        android:id="@+id/home_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stub" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/home_btn_map"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/gen_map"
        android:background="#008080"/>

    <Button
        android:id="@+id/register"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:text="@string/register"
        android:background="#0095B6"/>

    </LinearLayout>
</LinearLayout>